[tool.poetry]
name = "prompt-enhancer-cli"
version = "1.0.0"
description = "CLI tool to parse and enhance prompts for AI models - extracts intent, context, constraints and classifies prompt types"
authors = ["Prompt Enhancer Team"]
readme = "README.md"
packages = [{include = "prompt_enhancer"}]
license = "MIT"

[tool.poetry.scripts]
prompt-enhancer = "prompt_enhancer.cli:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = "^8.1.7"
sentence-transformers = "^2.2.2"
nltk = "^3.8.1"
python-dotenv = "^1.0.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.9"

[tool.ruff]
select = [
  "E",
  "F",
  "I",
]
line-length = 88
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"